# castr

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
include/: encoder.h  font.h  logger.h  threading.h  ui.h  utils.h
src/: encoder.c  font.c  logger.c  main.c  ui.c  utils.c
